--- a/pages/about.html
+++ b/pages/about.html
@@ -9,15 +9,22 @@ title: 关于
 
 <hr>
 <a href="{{ site.author.weibo }}" target="_blank">
-  <i class="fa fa-weibo fa-2x"></i>
+    <i class="fa fa-weibo fa-2x"></i>
 </a>
 <a href="{{ site.author.github }}" target="_blank">
-  <i class="fa fa-github fa-2x"></i>
+    <i class="fa fa-github fa-2x"></i>
 </a>
 <a href="/pages/atom.xml" target="_blank">
-  <i class="fa fa-rss fa-2x"></i>
+    <i class="fa fa-rss fa-2x"></i>
 </a>
 <a href="mailto:{{ site.author.email }}">
-  <i class="fa fa-envelope-o fa-2x"></i>
+    <i class="fa fa-envelope-o fa-2x"></i>
 </a>
-
+<span class="quora-content-embed"
+      data-name="Career-Advice/What-can-I-start-doing-now-that-will-help-me-a-lot-in-about-five-years/answer/Sandy-Kelty/quote/1625304">Read <a
+        data-width="575" data-height="172" class="quora-content-link"
+        href="http://www.quora.com/Career-Advice/What-can-I-start-doing-now-that-will-help-me-a-lot-in-about-five-years/answer/Sandy-Kelty/quote/1625304"
+        data-embed="srpnfft" data-type="quote" data-id="1625304" data-key="d2e8330b6261edb301998276489b1fad">Quote of
+    Sandy Kelty's answer to Career Advice: What can I start doing now that will help me a lot in about five years?</a> on <a
+        href="http://www.quora.com">Quora</a><script type="text/javascript"
+                                                     src="http://www.quora.com/widgets/content"></script></span>
